# apm2

./: AGENTS.md  Cargo.toml  DEVELOPMENT_EXPERIENCE_BROOKLYN_PROJECT.md  SELF_ASSEMBLY_PROTOCOL.md  run_rfc_codex_loop.sh  security_findings.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: bench.yml  ci-slow-lane.yml  ci.yml  docs.yml  fuzz.yml  miri.yml  release-plz.yml  release.yml  review-gate-pr-branch.yml  review-gate.yml
crates/apm2-core/: Cargo.toml
crates/apm2-daemon/: Cargo.toml
crates/apm2-holon/: Cargo.toml
crates/apm2-node/: Cargo.toml
crates/apm2-node/src/: holon.rs  main.rs
crates/apm2-node/src/worker/: claude.rs  mod.rs
crates/apm2-node/tests/: self_assembly.rs
documents/: README.md
documents/prompts/: instruction.alien_engineering_protocol.v1.json  instruction.alien_security.v1.json  instruction.rfc_0021_refinement.alien_engineering_protocol.v1.json
documents/reviews/: AAT_HYPOTHESIS_PROMPT.md  CI_EXPECTATIONS.md  CODE_QUALITY_PROMPT.md  FAC_LOCAL_GATE_RUNBOOK.md  SECURITY_REVIEW_PROMPT.md
documents/security/: unified_security_theory.json
documents/theory/: AGENTS.md  agent_native_protocols.json  agent_native_software.json  defects.json  laws.json  principles.json  unified_theory.json
proto/: apm2d_runtime_v1.proto  daemon_protocol.proto  kernel_events.proto  tool_protocol.proto
schemas/apm2/: changeset_bundle_v1.yaml  review_blocked_v1.yaml
scripts/ci/: evidence_refs_lint.sh  proto_enum_drift.sh  review_artifact_lint.sh  run_bounded_tests.sh  test_guardrail_fixtures.sh  test_lint_fixtures.sh  test_refs_lint.sh  (+2 more)
(+531 files in other folders)
