[package]
name = "apm2-node"
description = "Holonic node runtime for APM2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
apm2-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
uuid.workspace = true
